--- a/src/components/Ui/Tooltip/Tooltip.module.css
+++ b/src/components/Ui/Tooltip/Tooltip.module.css
@@ -6,9 +6,10 @@
 	border-radius: 4px;
 	font-weight: 500;
 	line-height: normal;
-	animation: scaleIn 250ms cubic-bezier(0.16, 1, 0.3, 1);
+	animation: scaleIn 300ms cubic-bezier(0.16, 1, 0.3, 1);
 	will-change: transform, opacity;
 	transform-origin: var(--side);
+	user-select: none;
 }
 
 .tooltip[data-state="delayed-open"][data-side="top"] {
