refactor: change interface Props names, delete unnecessary code

--- a/src/app/not-found.module.css
+++ b/src/app/not-found.module.css
@@ -10,7 +10,7 @@
 	line-height: 1;
 }
 
-.goBackHomeLink {
+.goHomeLink {
 	padding: 12px 28px;
 	margin-block-start: 24px;
 	font-weight: 500;
@@ -19,6 +19,6 @@
 	border-radius: var(--border-radius);
 }
 
-.goBackHomeLink:hover {
+.goHomeLink:hover {
 	filter: brightness(0.9);
 }
