--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -22,12 +22,8 @@
 	}
 }
 
-.navMenu {
+.navMenuWrapper {
 	order: -1;
-}
-
-.spacer {
-	flex-grow: 1;
 }
 
 .userMenuButton {
@@ -36,7 +32,7 @@
 }
 
 @media screen and (min-width: 880px) {
-	.navMenu {
+	.navMenuWrapper {
 		order: initial;
 	}
 
