--- a/src/components/NavMenu/NavMenuWrapper/NavMenuWrapper.module.css
+++ b/src/components/NavMenu/NavMenuWrapper/NavMenuWrapper.module.css
@@ -18,6 +18,34 @@
 	transition: var(--menu-open-transition);
 }
 
+.menuBtn {
+	--size: 32px;
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+	justify-content: center;
+	align-items: center;
+	inline-size: var(--size);
+	block-size: var(--size);
+}
+
+.line {
+	inline-size: 80%;
+	block-size: 3px;
+	border-radius: 2px;
+	background-color: currentColor;
+	transform-origin: 7px;
+	transition: transform 300ms cubic-bezier(0.68, -0.55, 0.27, 1.55);
+}
+
+.menuBtn.active .line:nth-child(1) {
+	transform: rotateZ(45deg) translate(2px);
+}
+
+.menuBtn.active .line:nth-child(2) {
+	transform: rotateZ(-45deg) translate(2px);
+}
+
 @media screen and (min-width: 880px) {
 	.menu {
 		position: static;
@@ -27,5 +55,9 @@
 		transform: unset;
 		transition: unset;
 		display: flex;
+	}
+
+	.menuBtn {
+		display: none;
 	}
 }
