--- a/src/components/Menus/NavMenu/NavMenu.module.css
+++ b/src/components/Menus/NavMenu/NavMenu.module.css
@@ -1,3 +1,50 @@
+.menuTrigger {
+	--size: 32px;
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+	justify-content: center;
+	align-items: center;
+	inline-size: var(--size);
+	block-size: var(--size);
+}
+
+.line {
+	inline-size: 80%;
+	block-size: 3px;
+	border-radius: 2px;
+	background-color: currentColor;
+	transform-origin: 7px;
+	transition: transform 300ms cubic-bezier(0.68, -0.55, 0.27, 1.55);
+}
+
+.menuTrigger[data-state="open"] .line:nth-child(1) {
+	transform: rotateZ(45deg) translate(2px);
+}
+
+.menuTrigger[data-state="open"] .line:nth-child(2) {
+	transform: rotateZ(-45deg) translate(2px);
+}
+
+.content {
+	position: fixed;
+	inset: 0;
+	inset-block-start: var(--header-block-size);
+	background-color: var(--bg-color);
+	opacity: 0;
+	visibility: hidden;
+	transform: translateY(-10px);
+	transition: var(--menu-transition);
+	overflow-y: auto;
+}
+
+.content[data-state="open"] {
+	opacity: 1;
+	visibility: visible;
+	transform: translateY(0);
+	transition: var(--menu-open-transition);
+}
+
 .navLink {
 	inline-size: 100%;
 }
@@ -8,4 +55,18 @@
 
 .minInlineSize {
 	min-inline-size: 200px;
+}
+
+@media screen and (min-width: 880px) {
+	.menuTrigger {
+		display: none;
+	}
+
+	.content {
+		all: unset;
+	}
+
+	.linksList {
+		display: flex;
+	}
 }
